changed button spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,7 @@ canvas {
 .controls {
   bottom: 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   left: 50%;
   padding: 1rem;
   position: absolute;
