--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,10 @@ canvas {
   transform: translate(-50%, -50%);
   width: 640px;
   z-index: 2;
+  @media all and (orientation: landscape) {
+    max-height: 95vh;
+    max-width: 95vh;
+  }
 }
 
 .controls {
@@ -33,9 +37,16 @@ canvas {
   position: absolute;
   transform: translateX(-50%);
   user-select: none;
-  width: 100%;
-  @media (min-width: 600px) {
-    display: none;
+  width: 100vw;
+  @media all and (orientation: portrait) {
+    @media (min-width: 600px) {
+      display: none;
+    }
+  }
+  @media all and (orientation: landscape) {
+    @media (min-height: 600px) {
+      display: none;
+    }
   }
   button {
     background-color: rgba(0, 0, 0, 0);
@@ -43,10 +54,9 @@ canvas {
     border-radius: 50%;
     color: #ddd;
     font-size: 3rem;
-    height: 9rem;
-    margin: 1rem;
+    height: 8rem;
     transition: background-color 0.5s ease-in-out, transform 0.5s ease-in-out;
-    width: 9rem;
+    width: 8rem;
     &.active {
       background-color: #53648f;
       transform: scale(0.9);
