--- a/src/style.scss
+++ b/src/style.scss
@@ -23,8 +23,8 @@ canvas {
   width: 640px;
   z-index: 2;
   @media all and (orientation: landscape) {
-    max-height: 95vh;
-    max-width: 95vh;
+    max-height: 80vh;
+    max-width: 80vh;
   }
 }
 
@@ -44,6 +44,8 @@ canvas {
     }
   }
   @media all and (orientation: landscape) {
+    align-items: center;
+    height: 100%;
     @media (min-height: 600px) {
       display: none;
     }
@@ -55,33 +57,12 @@ canvas {
     color: #ddd;
     font-size: 3rem;
     height: 8rem;
-    transition: background-color 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
     width: 8rem;
     &.active {
       background-color: #53648f;
-      transform: scale(0.9);
-    }
-    &#left {
-      transform: rotate(0);
-      &.active {
-        animation: rotate 0.5s linear infinite reverse;
-      }
-    }
-    &#right {
-      transform: rotate(0);
-      &.active {
-        animation: rotate 0.5s linear infinite;
-      }
+      transform: scale(0.95);
     }
   }
   z-index: 1;
-}
-
-@keyframes rotate {
-  from {
-    transform: scale(0.9) rotate(0);
-  }
-  to {
-    transform: scale(0.9) rotate(360deg);
-  }
 }
