--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,9 @@ canvas {
     max-height: 80vh;
     max-width: 80vh;
   }
+  @media all and (orientation: portrait) {
+    top: 40%;
+  }
 }
 
 .controls {
@@ -58,6 +61,7 @@ canvas {
     font-size: 3rem;
     height: 8rem;
     transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
+    -webkit-tap-highlight-color: transparent;
     width: 8rem;
     &.active {
       background-color: #53648f;
