--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,6 @@ html, body {
 
 canvas {
   background-color: black;
-  border: 10px solid #000;
   border-radius: 50%;
   height: 640px;
   left: 50%;
@@ -39,7 +38,6 @@ canvas {
   padding: 1rem;
   position: absolute;
   transform: translateX(-50%);
-  user-select: none;
   width: 100vw;
   @media all and (orientation: portrait) {
     @media (min-width: 600px) {
@@ -60,12 +58,13 @@ canvas {
     color: #ddd;
     font-size: 3rem;
     height: 8rem;
+    touch-action: none;
     transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
+    user-select: none;
     -webkit-tap-highlight-color: transparent;
     width: 8rem;
     &.active {
       background-color: #53648f;
-      transform: scale(0.95);
     }
   }
   z-index: 1;
