user select all platforms fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -58,10 +58,13 @@ canvas {
     color: #ddd;
     font-size: 3rem;
     height: 8rem;
+    -moz-user-select: none;
+    -ms-user-select: none;
     touch-action: none;
     transition: background-color 0.1s ease-in-out, transform 0.1s ease-in-out;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
     width: 8rem;
     &.active {
       background-color: #53648f;
